Bug 146094 - Impress refuses to go in presentation mode for specific presentation
Summary: Impress refuses to go in presentation mode for specific presentation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-12-07 12:37 UTC by Telesto
Modified: 2021-12-09 11:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (136.15 KB, application/vnd.oasis.opendocument.presentation)
2021-12-07 12:37 UTC, Telesto
Details
Bibisect log (2.74 KB, text/plain)
2021-12-07 12:53 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-12-07 12:37:10 UTC
Description:
Impress refuses to go in presentation mode for specific presentation

Steps to Reproduce:
1. Open the attached file
2. Press F5 for or it the play button

Actual Results:
Nothing

Expected Results:
Presentation starts


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ddc57169ac8d1de00403dbb09fef5221beaa0f3d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2021-12-07 12:37:26 UTC
Created attachment 176759 [details]
Example file
Comment 2 Telesto 2021-12-07 12:45:36 UTC
No issue with (except being rendered in slowmotion)
Version: 7.2.1.0.0+ (x64) / LibreOffice Community
Build ID: 8fdbb8aed1b48734a717d5f98ada566de7204605
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 3 Telesto 2021-12-07 12:46:23 UTC
Broken in
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7ec1ef958855ba7ebff4d3bc623f454015ec5a5c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 4 Telesto 2021-12-07 12:53:51 UTC
Created attachment 176762 [details]
Bibisect log

Bisected to
author	Noel Grandin <noel.grandin@collabora.co.uk>	2021-10-11 16:08:12 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-10-11 18:43:21 +0200
commit 043ba6ddf8d90b04acfae8ec836c4b772fb36754 (patch)
tree 3eda87f966654b46f85086f6814dcb77a1f8c1f1
parent 47331ae6f95070ff7460e541895895b59eb15103 (diff)
loplugin:moveparam in slideshow

https://cgit.freedesktop.org/libreoffice/core/commit/?id=043ba6ddf8d90b04acfae8ec836c4b772fb36754
Comment 5 Telesto 2021-12-07 12:54:46 UTC
Adding CC: to Noel Grandin
Comment 6 Rainer Bielefeld Retired 2021-12-07 18:32:23 UTC
REPRODUCIBLE with Server Installation of Version: 7.4.0.0.alpha0+ (x64)  Build ID ae36ee4f3aa544e53e2edad93d6d79160b27bc9d
CPU threads: 12; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win | Special devUserProfile | Locale: de-DE (de_DE); UI: de-DE | Calc: CL  

No obvious DUPs found with <https://bugs.documentfoundation.org/buglist.cgi?cmdtype=dorem&remaction=run&namedcmd=DUPs146094&sharer_id=19321>
Comment 7 Justin L 2021-12-09 06:57:46 UTC
Playing this causes my cinnamon-Mint desktop to crash/restart.

I see this warning: sd/source/ui/slideshow/slideshowimpl.cxx:1100: sd::SlideshowImpl::startShowImpl() com.sun.star.uno.RuntimeException message: IntrinsicAnimationActivity,
IntrinsicAnimationActivity::IntrinsicAnimationActivity(): Empty timeout vector /persistent/git/libreoffice2/slideshow/source/engine/shapes/intrinsicanimationactivity.cxx:132
Comment 8 Commit Notification 2021-12-09 09:16:15 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0cfd60b12855bc1e40640eb2e4cd4ea87d18ff7b

tdf#146094 Impress refuses to go in presentation mode

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2021-12-09 11:32:00 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/8ff5ba1ccd9c83bd03559ec4727e886e76721f53

tdf#146094 Impress refuses to go in presentation mode

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.