tdf#146094 Impress refuses to go in presentation mode

regression from
    commit 043ba6ddf8d90b04acfae8ec836c4b772fb36754
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Oct 11 16:08:12 2021 +0200
    loplugin:moveparam in slideshow

Change-Id: I8d6ec81f60e9bdba5b371b8a79abf3d07c523dfc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126567
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 0cfd60b12855bc1e40640eb2e4cd4ea87d18ff7b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126520
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>